--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Martina Weidenbaum</title>
+    <header id="head-name"><span><h3>Martina Weidenbaum --- Software Engineer</h3</span>
+    </header>
+
   </head>
   <body>
     <noscript>
